# e

./: .gitignore  CMakeLists.txt  Kconfig  README.md  e_util.c
cmake/: e.cmake
lib/: CMakeLists.txt  Kconfig
lib/zephyr/: CMakeLists.txt  Kconfig
src/: conventions.md  e.c  e.h  e_activity.c  e_activity.h  e_btn.c  e_btn.h  e_button.c  e_button.h  e_config.h.in  e_config__port.h  e_config__port_option.h  e_debug.h  e_msg.c  e_msg.h  e_queue.c  e_queue.h  e_shell.c  e_shell.h  e_state.c  e_state.h  e_tick.c  e_tick.h  e_tick_drv_if.h  e_trigger.c  e_trigger.h  e_util.c  e_util.h  e_vt100.h
src/e/: e.c  e.h  e__button.c  e__button.h  e__queue.c  e__queue.h  e_button.h  e_config.h  e_config__port.h  e_queue.c  e_queue.h  e_shell.c  e_shell.h  e_tick.c  e_tick.h
src/port/common/: e_tick__arm_cm.c
src/port/nxp__lpc865/: e_port__nxp__lpc865.h
src/port/nxp__mcxa/: e_port__nxp__mcxa.h
src/port/nxp__mcxn/: e_port__nxp__mcxn.h
src/port/pc/: e_port__pc.c  e_port__pc.h  e_tick__pc.c
src/port/rpi__rp2350/: e_port__rpi_rp2350.h  e_port__rpi_rp2350_tick.c
src/port/rpi__rp2xxx/: e_port__rpi_rp2xxx.h  e_tick__rpi_tick.c
src/port/test/: e_port__test.h
src/port/zephyr/: e_config.h  e_port__zephyr.c  e_port__zephyr.h  e_tick__zephyr.c
test/pc/btn_tap/: CMakeLists.txt
test/pc/btn_tap/src/: test_btn_tap.c
test/pc/state/: CMakeLists.txt
test/pc/state/src/: mock_tick.c  mock_tick.h  test_state.c
test/pc/tick/: CMakeLists.txt
test/pc/tick/src/: main.c  mock_tick.c  mock_tick.h  test_tick.c
test/unity/: README.md
test/zephyr/tick/: CMakeLists.txt  ozone_mcxn.jdebug  prj.conf  zephyr_modules.txt  zephyr_settings.txt
test/zephyr/tick/Kconfig/: kconfig_module_dirs.cmake  kconfig_module_dirs.env
test/zephyr/tick/src/: main.c
zephyr/: module.yml
